--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -23,3 +23,20 @@
   </div>
   <%= form.submit "Update Account" %>
 <% end %>
+<h2>Current Logins</h2>
+<% if @active_sessions.any? %>
+  <%= button_to "Log out of all other sessions", destroy_all_active_sessions_path, method: :delete %>
+  <table>
+    <thead>
+      <tr>
+        <th>User Agent</th>
+        <th>IP Address</th>
+        <th>Signed In At</th>
+        <th>Sign Out</th>
+      </tr>
+    </thead>
+    <tbody>
+      <%= render @active_sessions %>
+    </tbody>
+  </table>
+<% end %>
