--- a/app/views/shared/_form_errors.html.erb
+++ b/app/views/shared/_form_errors.html.erb
@@ -1,4 +1,4 @@
-<% if object.errors.any? %>
+<% if object&.errors&.any? %>
   <ul>
     <% object.errors.full_messages.each do |message| %>
       <li><%= message %></li>
