--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -11,7 +11,8 @@
   </head>
 
   <body>
-    <h1>Hello world</h1>
+    <h1>Welcome to a Diamond poetry website! </h1>
+    <p>See what a <a href="https://poetry4kids.com/lessons/how-to-write-a-diamante-poem/">Diamante poem</a> looks like.<p>
     <%= yield %>
   </body>
 </html>
