--- a/app/views/poems/_form.html.erb
+++ b/app/views/poems/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with model: poem do |form| %>
   <%= render partial: "shared/form_errors", locals: { object: form.object } %>
   <div>
-    <%= form.text_area :lines, required: true, size: "70x5" %>
+    <%= form.text_field :lines, required: true, size: "50x5", maxlength: Poem::MAX_VERSE_CHAR_LENGTH %>
   </div>
   <%= form.button %>
 <% end %>
