--- a/app/views/poems/edit.html.erb
+++ b/app/views/poems/edit.html.erb
@@ -1,3 +1,3 @@
 <h2>Edit poem</h2>
 <h3><%= "#{@poem.title}" %></h3>
-<%= render partial: "form", locals: { poem: @poem } %>
+<%= render partial: "add_form", locals: { poem: @poem } %>
