feat(User): add username

--- a/app/views/poems/show.html.erb
+++ b/app/views/poems/show.html.erb
@@ -4,6 +4,6 @@
 <hr/>
 <h3>Authors</h3>
 <% @poem.users.each do |author| %>
-  <div><%= author.email %></div>
+  <div><%= author.username %></div>
 <% end %>
   
