--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -13,6 +13,10 @@
     <%= form.password_field :password %>
   </div>
   <div>
+    <%= form.label :username, "Your username (shown next to your poems)" %>
+    <%= form.text_field :username %>
+  </div>
+  <div>
     <%= form.label :password_confirmation %>
     <%= form.password_field :password_confirmation %>
   </div>
