--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,10 @@
 <%= form_with model: @user, url: sign_up_path do |form| %>
   <%= render partial: "shared/form_errors", locals: { object: form.object } %>
   <div>
+    <%= form.label :username %>
+    <%= form.text_field :username, required: true %>
+  </div>
+  <div>
     <%= form.label :email %>
     <%= form.email_field :email, required: true %>
   </div>
